farmer-landing.css
body {
  position: relative;
  width: 1440px;
  height: 900px;

  background: #99B898;
}

  .text {
    position: absolute;
    width: 727px;
    height: 117px;
    left: 37%;
    top: 25%;

    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 96px;
    line-height: 117px;
    /* identical to box height */
    letter-spacing: 0.06em;

    color: #FECEAB;

  }

  .returning {
    position: absolute;
    width: 331px;
    height: 112px;
    left: 20%;
    top: 60%;

    border: 5px solid #FECEAB;
    box-sizing: border-box;

    background-color: #99B898;

    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 50px;
    text-align: center;
    letter-spacing: 0.06em;

    color: #FECEAB;
  }

  .returning:hover {
    background-color: #FECEAB;
    color: #99B898;
    transition-duration: 400ms;
  }

  .new {
    position: absolute;
    width: 331px;
    height: 112px;
    left:70%;
    top: 60%;

    border: 5px solid #FECEAB;
    box-sizing: border-box;

    background-color: #99B898;

    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 100px;
    text-align: center;
    letter-spacing: 0.06em;

    color: #FECEAB;
  }

  .new:hover {
    background-color: #FECEAB;
    color: #99B898;
    transition-duration: 400ms;
  }

  .logo {
    position: absolute;
    width: 44px;
    height: 90px;
    left: 21px;
    top: 23px;
  }

